[Resource Sharing] Add alias and wildcard support for resource indices
Signed-off-by: Craig Perkins <cwperx@amazon.com>